# spliny

./: Cargo.toml  README.md
examples/: cubic2d.rs  random.rs
src/: lib.rs  plot.rs  spline.rs  splines.rs
