[package]
name = "spliny"
version = "0.2.0"
edition = "2018"
description = "b-Spline Curves"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/spliny"
keywords = ["basis-splines", "splines"]
license = "MIT OR Apache-2.0"


[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
plotters = {version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"
splinify = "0.1"

[features]
default = []
plot = []

